--- a/index.html
+++ b/index.html
@@ -438,19 +438,19 @@
         <h2 class="section-title">GALLERY</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img id="gallery-img-1" alt="TRANS 2023">
+                <img src="https://claude.ai/api/5a13b713-3ca1-4c28-86c4-964f490c4e5f/files/2d081830-cd39-44ef-8eae-249c94d18c57/preview" alt="TRANS 2023">
             </div>
             <div class="gallery-item">
-                <img id="gallery-img-2" alt="TRANS 2024">
+                <img src="https://claude.ai/api/5a13b713-3ca1-4c28-86c4-964f490c4e5f/files/0112d54f-2a9f-4678-9ec0-30ad1e8687d3/preview" alt="TRANS 2024">
             </div>
             <div class="gallery-item">
-                <img id="gallery-img-3" alt="TRANS 2024">
+                <img src="https://claude.ai/api/5a13b713-3ca1-4c28-86c4-964f490c4e5f/files/81cfea7e-2ee1-4fd2-9ae5-191544010e90/preview" alt="TRANS 2024">
             </div>
             <div class="gallery-item">
-                <img id="gallery-img-4" alt="TRANS 2025">
+                <img src="https://claude.ai/api/5a13b713-3ca1-4c28-86c4-964f490c4e5f/files/32c567fa-f103-45c3-abcf-e3d194c0f462/preview" alt="TRANS 2025">
             </div>
             <div class="gallery-item">
-                <img id="gallery-img-5" alt="TRANS 2025">
+                <img src="https://claude.ai/api/5a13b713-3ca1-4c28-86c4-964f490c4e5f/files/cf4869c5-5587-40a6-8c41-7a9cdf5b138b/preview" alt="TRANS 2025">
             </div>
         </div>
     </section>
@@ -541,30 +541,6 @@
     </footer>
 
     <script>
-        // 이미지 로드
-        async function loadImages() {
-            const images = [
-                { id: 'gallery-img-1', file: 'image_1' },
-                { id: 'gallery-img-2', file: 'image_2' },
-                { id: 'gallery-img-3', file: 'image_3' },
-                { id: 'gallery-img-4', file: 'image_4' },
-                { id: 'gallery-img-5', file: 'image_5' }
-            ];
-
-            for (const img of images) {
-                try {
-                    const data = await window.fs.readFile(img.file);
-                    const blob = new Blob([data]);
-                    const url = URL.createObjectURL(blob);
-                    document.getElementById(img.id).src = url;
-                } catch (err) {
-                    console.error(`Failed to load ${img.file}:`, err);
-                }
-            }
-        }
-
-        loadImages();
-
         // 부드러운 스크롤
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
@@ -591,7 +567,5 @@
             lastScroll = currentScroll;
         });
     </script>
-</body>
-</html>
 </body>
 </html>
