--- a/index.html
+++ b/index.html
@@ -501,12 +501,12 @@
         // 이미지 데이터
         const images = {
             '2023': [
-                '1eHEBjPFHk53bVOofcpx_74jEi1fgsqPZ', '1v4yWOcdDdzpBelwkDlSdZljjj4TBvKWa',
+                '1A6OYBqS6dh-zixzP5P3gNNESJNvQkhwD', '1v4yWOcdDdzpBelwkDlSdZljjj4TBvKWa',
                 '1Fkb0DjnWlliJkO-yNi82CLbFrJsCrnB5', '1FqqYWbcCBWCbrJmLoskQWJmBKF3mWXw2',
                 '1kNZawehpgYM04EeUh6enaJn0DRYXpADZ', '1gL2bWHyu5Mb1qs2-j9JJihk9ugDZ2Feh',
                 '1D4ql49weDALXXD6t_mPm3MIkGAjj7she', '1IbV9uQi_QCrmQajH4dplBmj1wZA8B5uw',
                 '1UjjOzHIrM0T3Z0fDH5_S2rLhx02uYCvE', '1WjNG3al6ski5SO9CUeXGuo4R3wabYLEA',
-                '1A6OYBqS6dh-zixzP5P3gNNESJNvQkhwD', 
+                '1eHEBjPFHk53bVOofcpx_74jEi1fgsqPZ'
             ],
             '2024': [
                 '1b2b0193SPKSjowd4bzgUG181aJAkZMgV', '1d-4RFdUMHrToQB4wSDusp-5DDjibk_XE',
