--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            padding-top: 105px;
+            justify-content: flex-start;
+            padding-top: 180px;
             gap: 5px;
             position: relative;
         }
@@ -457,40 +457,261 @@
         /* 반응형 */
         @media (max-width: 768px) {
             header {
-                padding: 20px 30px;
+                padding: 15px 20px;
             }
 
             nav {
-                gap: 25px;
+                gap: 15px;
             }
 
             nav a {
                 font-size: 10px;
+                letter-spacing: 1px;
             }
 
             .logo {
-                font-size: 24px;
+                height: 35px;
+            }
+
+            .logo img {
+                max-width: 120px;
+            }
+
+            .home-hero {
+                padding-top: 100px;
+                gap: 8px;
             }
 
             .home-hero h1 {
                 font-size: 60px;
-                letter-spacing: 4px;
+                letter-spacing: -1px;
+            }
+
+            .home-hero p {
+                font-size: 12px;
+                letter-spacing: 1.5px;
+            }
+
+            .social-icons {
+                gap: 20px;
+                bottom: 40px;
+            }
+
+            .social-icons a {
+                font-size: 16px;
             }
 
             .page-content {
-                padding: 60px 30px;
+                padding: 60px 20px;
             }
 
             .page-title {
-                font-size: 36px;
+                font-size: 28px;
+                letter-spacing: 2px;
+                margin-bottom: 50px;
+            }
+
+            .about-main h2 {
+                font-size: 16px;
+                line-height: 1.6;
+                margin-bottom: 30px;
+            }
+
+            .about-text {
+                font-size: 13px;
+                line-height: 1.7;
+                max-width: 100%;
+            }
+
+            .project-title {
+                font-size: 16px;
+                margin-bottom: 10px;
+            }
+
+            .project-info {
+                font-size: 11px;
+            }
+
+            .project-item {
+                padding: 25px 0;
+            }
+
+            .gallery-year {
+                font-size: 16px;
+                letter-spacing: 1.5px;
+                margin-bottom: 20px;
+            }
+
+            .slider-btn {
+                font-size: 18px;
+                padding: 10px 12px;
+            }
+
+            .dot {
+                width: 5px;
+                height: 5px;
+                margin: 0 4px;
+            }
+
+            .ticket-info {
+                padding: 25px;
+                margin-bottom: 30px;
+            }
+
+            .ticket-info h3 {
+                font-size: 16px;
+                margin-bottom: 15px;
+            }
+
+            .ticket-info p {
+                font-size: 12px;
+                line-height: 1.6;
+            }
+
+            .ticket-btn {
+                padding: 12px;
+                font-size: 12px;
             }
 
             .contact-icons {
-                gap: 30px;
+                gap: 25px;
+                margin-bottom: 40px;
+            }
+
+            .contact-icon {
+                font-size: 26px;
+                margin-bottom: 10px;
+            }
+
+            .contact-text {
+                font-size: 12px;
+                line-height: 1.8;
+            }
+
+            .contact-divider {
+                margin: 35px auto;
+            }
+
+            footer {
+                padding: 30px 20px;
+                font-size: 10px;
+            }
+        }
+
+        /* 모바일 초소형 (320px 이상) */
+        @media (max-width: 480px) {
+            header {
+                padding: 12px 15px;
+            }
+
+            nav {
+                gap: 10px;
+            }
+
+            nav a {
+                font-size: 9px;
+            }
+
+            .logo {
+                height: 30px;
+            }
+
+            .logo img {
+                max-width: 100px;
+            }
+
+            .home-hero {
+                padding-top: 80px;
+                gap: 6px;
+            }
+
+            .home-hero h1 {
+                font-size: 45px;
+                letter-spacing: -1px;
+            }
+
+            .home-hero p {
+                font-size: 11px;
+                letter-spacing: 1px;
+            }
+
+            .social-icons {
+                gap: 18px;
+                bottom: 30px;
+            }
+
+            .social-icons a {
+                font-size: 14px;
+            }
+
+            .page-content {
+                padding: 50px 15px;
+            }
+
+            .page-title {
+                font-size: 24px;
+                letter-spacing: 1.5px;
+                margin-bottom: 40px;
+            }
+
+            .about-main h2 {
+                font-size: 14px;
+                line-height: 1.5;
+                margin-bottom: 25px;
+            }
+
+            .about-text {
+                font-size: 12px;
+                line-height: 1.6;
+            }
+
+            .project-title {
+                font-size: 14px;
+            }
+
+            .project-info {
+                font-size: 10px;
+            }
+
+            .project-item {
+                padding: 20px 0;
+            }
+
+            .gallery-year {
+                font-size: 14px;
+                margin-bottom: 15px;
+            }
+
+            .slider-btn {
+                font-size: 16px;
+                padding: 8px 10px;
+                left: 8px;
+                right: 8px;
+            }
+
+            .ticket-info {
+                padding: 20px;
+            }
+
+            .ticket-info h3 {
+                font-size: 14px;
+            }
+
+            .ticket-info p {
+                font-size: 11px;
+            }
+
+            .contact-icons {
+                gap: 20px;
             }
 
             .contact-icon {
                 font-size: 24px;
+            }
+
+            footer {
+                padding: 25px 15px;
+                font-size: 9px;
             }
         }
     </style>
