--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                 <div class="coming-soon">Not Available</div>
                 <div class="ticket-info" style="opacity: 0.5;">
                     <h3>TRANS III: 주어 없는 움직임</h3>
-                    <p>2025년 8월 5일 - 8월 6일<br>서강대학교 메리홀 대극장<br><br>공연이 종료되었습니다.</p>
+                    <p>2025년 8월 5일 - 8월 6일<br>서강대학교 메리홀 대극장<br><br>본 공연은 종료되었습니다.</p>
                 </div>
                 <button class="ticket-btn disabled">예매하기</button>
             </div>
