--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="TRANS">
-    <meta name="twitter:description" content="TRANS = 變(번) - 우리는 고정되기를 거부한다. 우리는 만남과 충돌을 상상한다.">
+    <meta name="twitter:description" content="TRANS = 變(변) - 우리는 고정되기를 거부한다. 우리는 만남과 충돌을 상상한다.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/TRANSSERIES/trans/main/og%20img.webp">
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -387,10 +387,10 @@
         <div class="page-content">
             <h1 class="page-title">TICKET</h1>
             <div class="ticket-content">
-                <div class="coming-soon">COMING SOON</div>
+                <div class="coming-soon">Not Available</div>
                 <div class="ticket-info" style="opacity: 0.5;">
                     <h3>TRANS III: 주어 없는 움직임</h3>
-                    <p>2025년 8월 5일 - 8월 6일<br>서강대학교 메리홀 대극장<br><br>티켓 예매는 추후 공지됩니다.</p>
+                    <p>2025년 8월 5일 - 8월 6일<br>서강대학교 메리홀 대극장<br><br>본 공연은 종료되었습니다.</p>
                 </div>
                 <button class="ticket-btn disabled">예매하기</button>
             </div>
