--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         </div>
     </div>
 
-    <footer><p>© 2026년 TRANS. ALL RIGHTS RESERVED.</p></footer>
+    <footer><p>© 2026 TRANS. ALL RIGHTS RESERVED.</p></footer>
 
     <script>
         // 인트로 애니메이션
